fixed mobile spacing

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -13,6 +13,9 @@ a {
 }
 
 .root {
+    width: 100vw;;
+    height: 100vh;
+
     display: grid;
 
     grid-template-columns: repeat(3, 1fr);
